--- a/back-end/src/Public/websiteLogic/creepView.html
+++ b/back-end/src/Public/websiteLogic/creepView.html
@@ -33,7 +33,7 @@
     <div class="topBarButtons" id="topBarButton">
         <a id="user" href="userView.html">
             <i class="far fa-user-circle"></i>
-            Codecooler
+            Creep
         </a>
         <a id="signOut" href="login.html">
             <i class="fas fa-sign-out-alt"></i>
@@ -53,7 +53,7 @@
         <h2 class="surname"></h2>
         <h3 class="phone"></h3>
         <p>
-            Status: student <br/>
+            Status: creep <br/>
         </p>
         <p class="email"></p>
         <button class="password">change password</button>
@@ -66,10 +66,9 @@
     <a href="#" class="close" onclick="closeSlideMenu()">
         <i class="fas fa-times"></i>
     </a>
-    <a href="wallet.html">Wallet</a>
-    <a href="shop.html">Shop</a>
-    <a href="quests.html">Quests</a>
-</div>s
+    <a href="manageAccounts.html">Manage accounts</a>
+    <a href="classes.html">Classes</a>
+</div>
 
 
 </body>
