--- a/back-end/src/Public/websiteLogic/mentors.html
+++ b/back-end/src/Public/websiteLogic/mentors.html
@@ -58,9 +58,9 @@
         <img id="Public/image" src="../images/logo.png">
     </a>
     <div class="topBarButtons" id="topBarButton">
-        <a id="user" href="userView.html">
+        <a id="user" href="mentorView.html">
             <i class="far fa-user-circle"></i>
-            Codecooler
+            Mentor
         </a>
         <a id="signOut" href="login.html">
             <i class="fas fa-sign-out-alt"></i>
