--- a/back-end/src/Public/websiteLogic/mentorView.html
+++ b/back-end/src/Public/websiteLogic/mentorView.html
@@ -31,9 +31,9 @@
         <img id="image" src="../images/logo.png">
     </a>
     <div class="topBarButtons" id="topBarButton">
-        <a id="user" href="userView.html">
+        <a id="user" href="mentorView.html">
             <i class="far fa-user-circle"></i>
-            Codecooler
+            Mentor
         </a>
         <a id="signOut" href="login.html">
             <i class="fas fa-sign-out-alt"></i>
@@ -66,7 +66,7 @@
     <a href="#" class="close" onclick="closeSlideMenu()">
         <i class="fas fa-times"></i>
     </a>
-    <a href="students.html">Students</a>
+    <a href="mentor-student.html">Students</a>
     <a href="mentor-store.html">Store</a>
     <a href="mentor-quests.html">Quests</a>
 </div>
