fixed hidding password

--- a/back-end/src/Public/websiteLogic/login.html
+++ b/back-end/src/Public/websiteLogic/login.html
@@ -18,7 +18,7 @@
 <img class="image" src="../images/logo.png">
 <form id="login-form">
     <input type="text" name="email" placeholder="E-mail address" data-my="x">
-    <input type="text" name="password" placeholder="Password">
+    <input type="password" name="password" placeholder="Password">
 <!--    <input class="inside" class="hide" type="text" name="confirm_password" placeholder="Confirm password">-->
 <!--    <button class="inside" class="submit" class="login">Sign in</button>-->
     <button>SIGN IN</button>
