fixed creep personal profile shoeing

--- a/back-end/src/Public/websiteLogic/login.html
+++ b/back-end/src/Public/websiteLogic/login.html
@@ -21,13 +21,8 @@
     <input type="password" name="password" placeholder="Password">
 <!--    <input class="inside" class="hide" type="text" name="confirm_password" placeholder="Confirm password">-->
 <!--    <button class="inside" class="submit" class="login">Sign in</button>-->
-    <button>SIGN IN</button>
+    <button class="inside">SIGN IN</button>
 </form>
 </div>
-<!--<p id="shortcuts">
-    <a href="index.html">codecooler</a>
-    <a href="mentorView.html">mentor</a>
-    <a href="manageAccounts.html">creep</a>
-</p>-->
 </body>
 </html>
